--- a/gfm-cheatsheet.html
+++ b/gfm-cheatsheet.html
@@ -7,19 +7,35 @@
 <link href="gfm.css" type="text/css" rel="stylesheet"/>
 
 <style>
+body {
+    margin: 0;
+}
+
 * {
     font-family: 'PlemolJP', monospace;
     line-height: 160%;
 }
 
-span.mcoden {
-    font-weight: 600;
-    background-color:#f0341321;
+tbody {
+    width: 100%;
+    display: table;
+}
+tr {
+    width: 100%;
+}
+td.cat {
+    width: 9em;
 }
 
-div.mcode, span.mcode {
+span.mcoden {
     font-weight: 600;
-    background-color: #f0341321;
+    background-color:#aa140015;
+}
+
+div.mcode,
+span.mcode {
+    font-weight: 600;
+    background-color: #aa140015;
     margin: 0.1em;
     padding: 0.1em;
 }
@@ -27,14 +43,13 @@ div.mcode, span.mcode {
 
 </head>
 <body>
-
 <h2>GFM(GitHub Flavored Markdown) チートシート</h2>
 
 <p>※ <span class="mcode">␣</span>は省略できないスペース</p>
 
 <table>
 <tr>
-<td>構造<br>(行頭)</td>
+<td class="cat">構造<br>(行頭)</td>
 <td>
 
 <span class="mcode">#␣見出しレベル1</span> <span class="mcode">##␣見出しレベル2</span> … ※ レベルは6まで<br>
@@ -54,7 +69,7 @@ div.mcode, span.mcode {
 
 <table>
 <tr>
-<td>文字修飾<br>(行内)</td>
+    <td class="cat">文字修飾<br>(行内)</td>
 <td>
 
 <span class="mcode">&#42;&#42;強調したい文字列&#42;&#42;</span> <span class="mcode">&#126;&#126;打ち消したい文字列&#126;&#126;</span><br>
@@ -62,10 +77,8 @@ div.mcode, span.mcode {
 <span class="mcode">&#96;行内に埋め込まれたコード&#96;</span> (バッククオートで囲う）<br>
 
 <span class="mcoden">:</span><span class="mcoden">+1</span><span class="mcoden">:</span> 絵文字 (絵文字一覧 <https://gist.github.com/rxaviers/7360908>)<br>
-</td></tr>
-</table>
-
-<table>
+</td>
+</tr>
 <tr>
 <td>リンク・脚注<br>(行内)</td>
 <td>
@@ -83,19 +96,21 @@ div.mcode, span.mcode {
 
 <table>
 <tr>
-<td>ブロック</td>
+<td class="cat">コード</td>
 <td>
 <div class="mcode">&#96;&#96;&#96;<br>
-コード<br>
+コード1行目<br>
+コード2行目<br>
 &#96;&#96;&#96;</div>
-※ 1行目につづけて<span class="mcode">&#96;&#96;&#96;python</span>などと、言語名を書くとシンタックスハイライト<br>
-
+※ 1行目に<span class="mcode">&#96;&#96;&#96;python</span>などと言語名を書くとシンタックスハイライト<br>
+</td>
+</tr>
+<tr>
+<td>引用</td>
+<td>
 <span class="mcode">&gt; 引用行</span> ※ 連続すると、1つのブロックとしてレンダリング<br>
 </td>
 </tr>
-</table>
-
-<table>
 <tr>
 <td>テーブル</td>
 <td>
@@ -112,7 +127,7 @@ div.mcode, span.mcode {
 
 <table>
 <tr>
-<td>その他</td>
+<td class="cat">その他</td>
 <td>
 HTMLのタグ<span class="mcode">&lt;....&gt;</span>や特殊文字<span class="mcode">&....;</span>や<span class="mcode">&lt;!-- コメント --&gt;</span><br>
 行末のスペース2つ（<span class="mcode">␣␣</span>） 行間の小さい改行<br>
