fix: 日付を入れた

--- a/gfm-cheatsheet.html
+++ b/gfm-cheatsheet.html
@@ -13,7 +13,7 @@ body {
 
 * {
     font-family: 'PlemolJP', monospace;
-    line-height: 160%;
+    line-height: 175%;
 }
 
 tbody {
@@ -37,13 +37,13 @@ span.mcode {
     font-weight: 600;
     background-color: #aa140015;
     margin: 0.1em;
-    padding: 0.1em;
 }
 </style>
 
 </head>
 <body>
-<h2>GFM(GitHub Flavored Markdown) チートシート</h2>
+<div style="float: right;">2022.06.21</div>
+<h3>GFM(GitHub Flavored Markdown) チートシート</h3>
 
 <p>※ <span class="mcode">␣</span>は省略できないスペース</p>
 
@@ -135,6 +135,5 @@ HTMLのタグ<span class="mcode">&lt;....&gt;</span>や特殊文字<span class="
 </td>
 </tr>
 </table>
-
 </body>
 </html>
