fix: 絵文字一覧のURLが抜けていた

--- a/gfm-cheatsheet.html
+++ b/gfm-cheatsheet.html
@@ -42,7 +42,7 @@ span.mcode {
 
 </head>
 <body>
-<div style="float: right;">2022.06.21</div>
+<div style="float: right;">2022.06.22</div>
 <h3>GFM(GitHub Flavored Markdown) チートシート</h3>
 
 <p>※ <span class="mcode">␣</span>は省略できないスペース</p>
@@ -76,7 +76,7 @@ span.mcode {
 
 <span class="mcode">&#96;行内に埋め込まれたコード&#96;</span> (バッククオートで囲う）<br>
 
-<span class="mcoden">:</span><span class="mcoden">+1</span><span class="mcoden">:</span> 絵文字 (絵文字一覧 <https://gist.github.com/rxaviers/7360908>)<br>
+<span class="mcoden">:</span><span class="mcoden">+1</span><span class="mcoden">:</span> 絵文字 (絵文字一覧 <a href="https://gist.github.com/rxaviers/7360908">https://gist.github.com/rxaviers/7360908</a>)<br>
 </td>
 </tr>
 <tr>
