fix: 画像の幅を指定する方法を追加

--- a/gfm-cheatsheet.html
+++ b/gfm-cheatsheet.html
@@ -36,13 +36,13 @@ td.cat {
 
 span.mcoden {
     font-weight: 600;
-    background-color:#aa140015;
+    background-color:#FF7F5060;
 }
 
 div.mcode,
 span.mcode {
     font-weight: 600;
-    background-color: #aa140015;
+    background-color: #FF7F5060;
     margin: 0.1em;
 }
 
@@ -54,7 +54,7 @@ span.bolded {
 </head>
 <body style="position: relative;">
 <h3>GFM(GitHub Flavored Markdown) チートシート</h3>
-<div style="position: absolute; top: 10pt; right: 10pt;">2022.06.23</div>
+<div style="position: absolute; top: 10pt; right: 10pt;">2022.07.08</div>
 
 <p>※ <span class="mcode">␣</span>は省略できないスペース</p>
 
@@ -98,6 +98,7 @@ span.bolded {
 <span class="mcode">&lt;https://〜URL〜&gt;</span> (URLがそのまま見出しになるリンク)<br>
 
 <span class="mcode">!&#91;&#93;(画像のURLまたはファイルのパス)</span><br>
+<span class="mcode">&lt;img width="pxや%単位の幅指定" src="画像のURLまたはファイルのパス"&gt;</span>
 
 脚注の印を入れたい部分に <span class="mcode">&#91;^1&#93;</span> を入れておき、
 別の行の行頭から <span class="mcode">&#91;^1&#93;:␣脚注のテキスト</span> を書く<br>
